--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
-    <uses-sdk android:minSdkVersion="22"/>
 
     <application
         android:allowBackup="true"
@@ -10,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.SpellTest.TestStatsActivity"></activity>
+        <activity android:name="com.example.SpellTest.TestStatsActivity"/>
         <activity android:name="com.example.SpellTest.TesterActivity" />
         <activity android:name="com.example.SpellTest.WordListBuilderActivity" />
         <activity
