--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity android:name="com.example.SpellTest.TesterActivity" />
         <activity android:name="com.example.SpellTest.WordListBuilderActivity" />
         <activity
-            android:name="com.example.SpellTest.WordListChooserActivity"
+            android:name="com.example.SpellTest.ListSelectionActivity"
             android:label="@string/title_activity_word_list_chooser"
             android:parentActivityName="com.example.SpellTest.UserSelectionActivity"  >
             <meta-data
